tests/snapshots/trace_solver__spanshot_request@16801807879347040434.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_binding_on_inherited: AllocTemporary
    mut_binding_on_inherited: ResetBindingMode
    inherited_ref_on_ref: EatOuter
    allow_ref_pat_on_ref_mut: true
    simplify_deref_mut: true
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
    rules_display_style: Plain
  bundle_name: ~
  request: "[mut x]: &[T]"
---
[mut x] @ p: &[T]
// Applying rule `ConstructorRef`
mut x @ &(*p).0: &T
// Applying rule `BindingResetBindingMode`
mut x @ (*p).0: T
// Applying rule `Binding`
let mut x: T = (*p).0

// Final bindings (simplified):
let mut x: T = (*p).0
